--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="se">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>The Garlic News</title>
   </head>
   <body>
     <header><h1>The Garlic News</h1></header>
 
     <article>
+      <h2>Trump har gjort det igen!</h2>
       <section>
-        <header>
-          <h2>Trump har gjort det igen!</h2>
-          <p>USAs president senaste tweet, "Det var jag som uppfann hjulet!"</p>
-        </header>
+        <h3>USAs president senaste tweet, "Det var jag som uppfann hjulet!"</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et
           recusandae eius aut minus amet fuga exercitationem delectus sint eos
@@ -30,11 +29,9 @@
       </section>
     </article>
     <article>
+      <h2>Ny måne hittad</h2>
       <section>
-        <header>
-          <h2>Ny måne hittad</h2>
-          <p>"Den smakade som kyckling", säger forskare</p>
-        </header>
+        <h3>"Den smakade som kyckling", säger forskare</h3>
         <p>Skriven av Olga Svensson</p>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
