--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
           architecto placeat illum consequuntur? Aliquam voluptatem quod
           expedita minima ipsa assumenda necessitatibus delectus asperiores!
         </p>
-        <p>Skriven av Yngve Magnusdottir</p>
+        <p class="author">Skriven av Yngve Magnusdottir</p>
       </section>
     </article>
     <article>
       <h2>Ny måne hittad</h2>
       <section>
         <h3>"Den smakade som kyckling", säger forskare</h3>
-        <p>Skriven av Olga Svensson</p>
+        <p class="author">Skriven av Olga Svensson</p>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
           consectetur corrupti est voluptatem dolore id laudantium debitis magni
